Fix macOS 64 bit code signing

--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,17 @@
 *.xcworkspace
 .DS_Store
 build
+*.exe
 *.opensdf
 *.sdf
 .vs
 Release
-Debug
-x64
 *.pkg
 *.so
 *.pkg
+.idea
+.idea/codeStyles/*.xml
+.idea/*.xml
+.idea/*.iml
 *.VC.db
+*.user
